src/assets/scss/main.scss
/* ... */
/* Touch */

body.is-touch {
  .image {
    &.thumb {
      &:before {
        opacity: 0.5 !important;
      }

      &:after {
        display: none !important;
      }
    }
  }

  #header {
    background-attachment: scroll;
    background-size: auto, cover;
  }

  .poptrox-popup {
    .nav-next,
    .nav-previous,
    .closer {
      opacity: 1 !important;
    }
  }
}

/* XLarge */

@include breakpoint(xlarge) {
  /* Basic */

  body,
  input,
  select,
  textarea {
    font-size: 12pt;
  }
}

/* Large */

@include breakpoint(large) {
  $size-header-width: 30%;
  $size-header-pad: 3em;

  /* Header */

  #header {
    padding: ($size-header-pad * 2) $size-header-pad $size-header-pad
      $size-header-pad;
    width: $size-header-width;

    h1 {
      font-size: 1.25em;

      br {
        display: none;
      }
    }
  }

  /* Footer */

  #footer {
    .copyright {
      li {
        border-left-width: 0;
        display: block;
        line-height: 2.25em;
        margin-left: 0;
        padding-left: 0;
      }
    }
  }

  /* Main */

  #main {
    margin-left: $size-header-width;
    max-width: none;
    padding: ($size-header-pad * 2) $size-header-pad $size-header-pad
      $size-header-pad;
    width: calc(100% - #{$size-header-width});
  }
}

/* Medium */

@include breakpoint(medium) {
  $size-header-pad: 4em;

  .projectDisplay {
    flex-direction: column;
    overflow: scroll;
    flex-flow: wrap;
    .projectImages {
      align-self: center;
      width: 95vw;
      img {
        height: auto;
      }
    }
    .projectDetails {
      width: 90vw;
      align-self: center;
    }
  }
  /* Basic */

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    br {
      display: none;
    }
  }

  /* List */

  ul {
    &.icons {
      li {
        .icon {
          font-size: 1.25em;
        }
      }
    }
  }

  /* Header */

  #header {
    background-attachment: scroll;
    background-position: top left, center center;
    background-size: auto, cover;
    left: auto;
    padding: ($size-header-pad * 1.5) $size-header-pad;
    position: relative;
    text-align: center;
    top: auto;
    width: 100%;
    display: block;

    h1 {
      font-size: 1.75em;

      br {
        display: inline;
      }
    }
  }

  /* Footer */

  #footer {
    bottom: auto;
    left: auto;
    padding: $size-header-pad $size-header-pad ($size-header-pad * 1.5)
      $size-header-pad;
    position: relative;
    text-align: center;
    width: 100%;

    .icons {
      margin: 0 0 (_size(element-margin) * 0.5) 0;
    }

    .copyright {
      margin: 0 0 (_size(element-margin) * 0.5) 0;

      li {
        border-left-width: 1px;
        display: inline-block;
        line-height: 1em;
        margin-left: 0.75em;
        padding-left: 0.75em;
      }
    }
  }

  /* Main */

  #main {
    margin: 0;
    padding: ($size-header-pad * 1.5) $size-header-pad;
    width: 100%;
  }
}

/* Small */

@include breakpoint(small) {
  $size-header-pad: 1.5em;

  /* Search */
  .projectSearch {
    display: block;
    .title {
      white-space: nowrap;
      padding-right: 1em;
    }
  }

  /* Basic */

  h1 {
    font-size: 1.5em;
  }

  h2 {
    font-size: 1.2em;
  }

  h3 {
    font-size: 1em;
  }

  /* Section/Article */

  section,
  article {
    &.special {
      text-align: center;
    }
  }

  header {
    &.major {
      h2 {
        font-size: 1.35em;
      }
    }
  }

  /* List */

  ul {
    &.labeled-icons {
      li {
        padding-left: 2em;

        h3 {
          line-height: 1.75em;
        }
      }
    }
  }

  /* Header */

  #header {
    padding: ($size-header-pad * 1.5) $size-header-pad;

    h1 {
      font-size: 1.35em;
    }
  }

  /* Footer */

  #footer {
    padding: ($size-header-pad * 1.5) $size-header-pad;
  }

  /* Main */

  #main {
    padding: ($size-header-pad * 1.5) $size-header-pad
      (($size-header-pad * 1.5) - _size(element-margin)) $size-header-pad;

    > section {
      margin: ($size-header-pad * 1.5) 0 0 0;
      padding: ($size-header-pad * 1.5) 0 0 0;
    }
  }

  /* Poptrox */

  .poptrox-popup {
    border-radius: 0;

    .nav-next,
    .nav-previous {
      &:before {
        margin-top: -1em;
      }
    }
  }
}

/* XSmall */

@include breakpoint(xsmall) {
  $size-header-pad: 1.5em;

  /* List */

  ul {
    &.actions {
      margin: 0 0 _size(element-margin) 0;

      li {
        display: block;
        padding: (_size(element-margin) * 0.5) 0 0 0;
        text-align: center;
        width: 100%;

        &:first-child {
          padding-top: 0;
        }

        > * {
          margin: 0 !important;
          width: 100%;

          &.icon {
            &:before {
              margin-left: -2em;
            }
          }
        }
      }

      &.small {
        li {
          padding: (_size(element-margin) * 0.25) 0 0 0;

          &:first-child {
            padding-top: 0;
          }
        }
      }
    }
  }

  /* Header */

  #header {
    padding: ($size-header-pad * 3) $size-header-pad;

    h1 {
      br {
        display: none;
      }
    }
  }

  /* Footer */

  #footer {
    .copyright {
      li {
        border-left-width: 0;
        display: block;
        line-height: 2.25em;
        margin-left: 0;
        padding-left: 0;
      }
    }
  }
}

@media screen and (max-width: 480px) {
  .\36 u,
  .\36 u24,
  .\38 u,
  .\38 u24,
  .\34 u,
  .\34 u24 {
    width: 100%;
  }
}

